force-app/main/default/objects/ssot__ResearchStudyProtocolDefinition__dlm/fields/ssot__ContentText__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentText__c</fullName>
    <label>Content</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>