force-app/main/default/objects/ssot__ResearchStudyProtocolDefinition__dlm/fields/ssot__ContentType__c.field-meta.xml
<CustomField>
    <fullName>ssot__ContentType__c</fullName>
    <label>Content Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ContentType</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>