force-app/main/default/objects/ssot__ResearchStudyProtocolDefinition__dlm/fields/ssot__rel_1733408339173_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1733408339173_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ResearchStudyProtocolDefinition_Rese_rel</label>
    <referenceTo>ssot__ResearchStudy__dlm</referenceTo>
    <relationshipLabel>ResearchStudyProtocolDefinition_Rese_rel</relationshipLabel>
    <relationshipName>rel_1733408339173_end</relationshipName>
    <type>Lookup</type>
</CustomField>